2009-12-21  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: don't unset IMSETTINGS_INTEGRATE_DESKTOP.

2009-10-06  Akira TAGOH  <tagoh@redhat.com>

	* data/xcompose.in.in: Add a xinput file for X compose.

2009-10-05  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: do not expand the wildcard in the message.

2009-09-30  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_526205.c: new test case.

	* src/monitor.c (_imsettings_monitor_lookup): compare the name with
	the lower case.

	* src/factory.c (imsettings_manager_real_whats_im_running): ensure not
	returning null even when any errors occurs.

	* imsettings/imsettings-observer.c (imsettings_whats_input_method_running):
	Fix a memory leak.

2009-09-28  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump the version to 0.107.4.

	* NEWS: update.

2009-09-17  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (_stop_process): get rid of the unnecessary increasing
	the reference count, which causes taking a lot CPU load again.

2009-09-15  Akira TAGOH  <tagoh@redhat.com>

	* data/xinputinfo.sh.in: output the value if the configuration is
	the script or not.

	* tests/main.c (init): set IMSETTINGS_HELPER_PATH to xinputinfo.sh
	working without the real installation.

	* tests/rhbz_523349.c: new testcase.

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Add a reference of the environment variable to get the unit testing
	working.
	(_IMSETTINGS_DEFUNC_PROPERTY): update the variables before looking
	if the configuration is based on the script. (rhbz#523349)
	(imsettings_info_is_script): new.

2009-09-11  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (_get_process_info_by_pid): new.
	(_watch_im_status_cb): unref'd the instance here to not keep
	the process running as zombie. (rhbz#522689)
	(_stop_process): don't remove the instance from the hash table yet.

2009-09-08  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_finalize): unreference the object.
